--- a/.github/workflows/stage-build.yml
+++ b/.github/workflows/stage-build.yml
@@ -248,9 +248,6 @@ jobs:
 
           poetry run deployer upload ../client/build
           poetry run deployer update-lambda-functions ./aws-lambda
-          poetry run deployer speedcurve-deploy \
-            --note "${GITHUB_SHA}" \
-            --detail "run_id=${GITHUB_RUN_ID} action=${GITHUB_ACTION}"
 
           # TODO: Depending on how long the upload takes, consider switching to
           # use `--update` in this command. It will skip the index re-creation
@@ -259,3 +256,10 @@ jobs:
           # Consider doing something like a clean indexing on Sundays and
           # use `--update` on all the other week days.
           poetry run deployer search-index ../client/build --priority-prefix=en-us/docs/web
+
+          # Record the deployment in our Speedcurve account. This should always
+          # be done after the upload of the documents and Lambda functions, as well
+          # as the search-index update, so those aren't affected if this fails.
+          poetry run deployer speedcurve-deploy \
+            --note "${GITHUB_SHA}" \
+            --detail "run_id=${GITHUB_RUN_ID} action=${GITHUB_ACTION}"
