chore: Move ESLint to overrides and .eslintignore (#2409)
* chore: Move ESLint to overries and .eslintignore

* chore: Read ESLint ignores from .git/info/exclude

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:client": "cd client && cross-env INLINE_RUNTIME_CHUNK=false react-scripts build",
     "build:ssr": "cd ssr && webpack --config webpack.config.js --mode=production",
     "dev": "yarn prepare-build && nf -j Procfile.dev start",
-    "eslint": "eslint \"content/**/*.js\" \"build/**/*.js\" \"kumascript/**/*.js\" \"tool/**/*.js\" \"server/**/*.js\" \"testing/**/*.js\"",
+    "eslint": "eslint .",
     "filecheck": "cd filecheck && node cli.js",
     "fiori:build": "cd client && build-storybook",
     "fiori:start": "cd client && start-storybook -p 6006",
@@ -97,6 +97,7 @@
     "diff": "^5.0.0",
     "downshift": "^6.1.0",
     "eslint": "^7.18.0",
+    "eslint-gitignore": "^0.1.0",
     "eslint-plugin-jest": "24.1.3",
     "eslint-plugin-node": "11.1.0",
     "extend": "^3.0.2",
