--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production node build/cli.js",
     "build:client": "cd client && cross-env INLINE_RUNTIME_CHUNK=false react-scripts build",
-    "build:ssr": "cd ssr && webpack --config webpack.config.js --mode=production",
+    "build:ssr": "cd ssr && webpack --mode=production",
     "dev": "yarn prepare-build && nf -j Procfile.dev start",
     "eslint": "eslint .",
     "filecheck": "cd filecheck && node cli.js",
@@ -27,7 +27,7 @@
     "test:kumascript": "jest kumascript",
     "test:testing": "cd testing && jest",
     "tool": "node tool/cli.js",
-    "watch:ssr": "cd ssr && webpack --config webpack.config.js --mode=production --watch"
+    "watch:ssr": "cd ssr && webpack --mode=production --watch"
   },
   "husky": {
     "hooks": {
