chore: expand prettier globs

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "fiori:build": "cd client && build-storybook",
     "fiori:start": "cd client && start-storybook -p 6006",
     "prepare-build": "yarn build:client && yarn build:ssr && yarn build --spas-only && yarn tool gather-git-history --verbose",
-    "prettier-check": "prettier --check \"**/*.{js,ts,tsx,json,scss,html}\"",
-    "prettier-format": "prettier --write \"**/*.{js,ts,tsx,json,scss,html}\"",
+    "prettier-check": "prettier --check .",
+    "prettier-format": "prettier --write .",
     "start": "(test -f client/build/index.html || yarn build:client) && (test -f ssr/dist/main.js || yarn build:ssr) && (test -d client/build/en-us/_spas || yarn build --spas-only) && nf -j Procfile.start start",
     "start:client": "cd client && cross-env BROWSER=none PORT=3000 react-scripts start",
     "start:dev-server": "nodemon server --watch server --watch build --watch content --watch kumascript --ext js",
