--- a/package.json
+++ b/package.json
@@ -99,9 +99,11 @@
     "diff": "^5.0.0",
     "downshift": "^6.1.0",
     "eslint": "^7.18.0",
+    "eslint-config-prettier": "^7.2.0",
     "eslint-gitignore": "^0.1.0",
     "eslint-plugin-jest": "24.1.3",
     "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "extend": "^3.0.2",
     "flexsearch": "0.6.32",
     "foreman": "3.0.1",
