--- a/.github/workflows/developing.yml
+++ b/.github/workflows/developing.yml
@@ -56,22 +56,21 @@ jobs:
           # the content if loading this page fails.
           ls "$CONTENT_ROOT/en-us/mdn/kitchensink"
 
-          yarn dev > /tmp/stdout.log 2> /tmp/stderr.log &
-          # yarn prepare-build
-          # yarn start > /tmp/stdout.log 2> /tmp/stderr.log &
+          yarn --version
+          echo "WHYYYYYYY?"
+          yarn why levenary
+
+
+          yarn prepare-build
+          yarn start > /tmp/stdout.log 2> /tmp/stderr.log &
 
       - name: Wait for servers
         run: |
           # Just a slight delay to wait until the dev server is ready.
-          sleep 10
+          sleep 5
 
-          curl --retry-connrefused --retry 10 http://localhost:5000 > /dev/null
-          curl --retry-connrefused --retry 10 --silent http://localhost:3000 > /dev/null
-
-          echo "STDOUT..................................................."
-          cat /tmp/stdout.log
-          echo "STDERR..................................................."
-          cat /tmp/stderr.log
+          curl --retry-connrefused --retry 5 http://localhost:5000 > /dev/null
+          curl --retry-connrefused --retry 5 --silent http://localhost:3000 > /dev/null
 
       - name: Test viewing the dev server
         env:
