--- a/.github/workflows/developing.yml
+++ b/.github/workflows/developing.yml
@@ -58,38 +58,37 @@ jobs:
 
           yarn --version
           echo "WHYYYYYYY?"
-          yarn why levenary
-
+          yarn why levenary && ls -l node_modules | grep leven
 
           yarn prepare-build
-          yarn start > /tmp/stdout.log 2> /tmp/stderr.log &
+      #     yarn start > /tmp/stdout.log 2> /tmp/stderr.log &
 
-      - name: Wait for servers
-        run: |
-          # Just a slight delay to wait until the dev server is ready.
-          sleep 5
+      # - name: Wait for servers
+      #   run: |
+      #     # Just a slight delay to wait until the dev server is ready.
+      #     sleep 5
 
-          curl --retry-connrefused --retry 5 http://localhost:5000 > /dev/null
-          curl --retry-connrefused --retry 5 --silent http://localhost:3000 > /dev/null
+      #     curl --retry-connrefused --retry 5 http://localhost:5000 > /dev/null
+      #     curl --retry-connrefused --retry 5 --silent http://localhost:3000 > /dev/null
 
-      - name: Test viewing the dev server
-        env:
-          # This will make sure the tests in `testing/tests/*.test.js` only run
-          # if the development server is up and ready to be tested.
-          TESTING_DEVELOPING: true
-          # Use local chrome installs since we skip downloading it as part
-          # of the yarn installs above
-          PUPPETEER_EXECUTABLE_PATH: /usr/bin/google-chrome
-        run: |
-          status=0
-          yarn test:testing developing || (
-            status=$?
-            echo "Testing failed! Going to dump stdout and stderr"
-            echo "STDOUT..................................................."
-            cat /tmp/stdout.log
-            echo "STDERR..................................................."
-            cat /tmp/stderr.log
-            echo $status
-            exit $status
-          )
-          exit $status
+      # - name: Test viewing the dev server
+      #   env:
+      #     # This will make sure the tests in `testing/tests/*.test.js` only run
+      #     # if the development server is up and ready to be tested.
+      #     TESTING_DEVELOPING: true
+      #     # Use local chrome installs since we skip downloading it as part
+      #     # of the yarn installs above
+      #     PUPPETEER_EXECUTABLE_PATH: /usr/bin/google-chrome
+      #   run: |
+      #     status=0
+      #     yarn test:testing developing || (
+      #       status=$?
+      #       echo "Testing failed! Going to dump stdout and stderr"
+      #       echo "STDOUT..................................................."
+      #       cat /tmp/stdout.log
+      #       echo "STDERR..................................................."
+      #       cat /tmp/stderr.log
+      #       echo $status
+      #       exit $status
+      #     )
+      #     exit $status
