--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "imagemin-svgo": "8.0.0",
     "is-svg": "4.2.1",
     "js-yaml": "4.0.0",
+    "lru-cache": "^6.0.0",
     "mdn-data": "2.0.16",
     "open": "^7.4.0",
     "open-editor": "3.0.0",
