--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "imagemin-mozjpeg": "9.0.0",
     "imagemin-pngquant": "9.0.1",
     "imagemin-svgo": "8.0.0",
+    "inquirer": "^7.3.3",
     "is-svg": "4.2.1",
     "js-yaml": "4.0.0",
     "lru-cache": "^6.0.0",
