--- a/package.json
+++ b/package.json
@@ -55,12 +55,12 @@
     "dotenv": "8.2.0",
     "ejs": "3.1.6",
     "express": "4.17.1",
-    "express-http-proxy": "1.6.2",
     "file-type": "16.2.0",
     "front-matter": "4.0.2",
     "fs-extra": "9.1.0",
     "glob": "^7.1.6",
     "got": "11.8.1",
+    "http-proxy-middleware": "1.0.6",
     "image-size": "0.9.3",
     "imagemin": "7.0.1",
     "imagemin-gifsicle": "7.0.0",
