--- a/package.json
+++ b/package.json
@@ -67,13 +67,14 @@
     "imagemin-mozjpeg": "9.0.0",
     "imagemin-pngquant": "9.0.1",
     "imagemin-svgo": "8.0.0",
+    "inquirer": "^7.3.3",
     "is-svg": "4.2.1",
     "js-yaml": "4.0.0",
+    "lru-cache": "^6.0.0",
     "mdn-data": "2.0.16",
     "open": "^7.4.0",
     "open-editor": "3.0.0",
     "prismjs": "1.23.0",
-    "prompts": "^2.4.0",
     "sanitize-filename": "^1.6.3",
     "send": "0.17.1",
     "source-map-support": "0.5.19",
