--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "eslint-plugin-jest": "24.1.3",
     "eslint-plugin-node": "11.1.0",
     "extend": "^3.0.2",
+    "fast-xml-parser": "3.18.0",
     "flexsearch": "0.6.32",
     "foreman": "3.0.1",
     "fuzzyjs": "4.0.4",
