unslug as in move to original slugs (#2192)
* unslug

* output changes

* output unslug changes as md

* add explainer and md summary per locale

* eslint

* handle translation of original better

* typo

* use in build and fixes

* fix build

* cleanup

* fix test build

* nit

* lint

* don't unslug by default

* rename unslug -> sync translated content

* error if CONTENT_TRANSLATED_ROOT is not set

* import os

* Apply suggestions from code review

Co-authored-by: Ryan Johnson <escattone@gmail.com>

* Update build/sync-translated-content.js

Co-authored-by: Ryan Johnson <escattone@gmail.com>

* prettier

* nits

Co-authored-by: Ryan Johnson <escattone@gmail.com>

--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "inquirer": "^7.3.3",
     "is-svg": "4.2.1",
     "js-yaml": "4.0.0",
+    "loglevel": "^1.7.1",
     "lru-cache": "^6.0.0",
     "mdn-data": "2.0.16",
     "open": "^7.4.2",
