--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "start:dev-server": "nodemon server --watch server --watch build --watch content --watch kumascript --ext js --watch ssr/dist",
     "start:server": "node server",
     "start:static-server": "cross-env ENV_FILE=testing/.env node server/static.js",
-    "test": "yarn prettier-check && yarn test:client && yarn test:kumascript && yarn test:build && yarn test:content && yarn test:testing",
-    "test:build": "jest build",
+    "test": "yarn prettier-check && yarn test:client && yarn test:kumascript && yarn test:content && yarn test:testing",
     "test:client": "cd client && tsc --noEmit && react-scripts test --env=jest-environment-jsdom-sixteen",
     "test:content": "jest content",
     "test:kumascript": "jest kumascript",
