--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     }
   },
   "resolutions": {
+    "@typescript-eslint/typescript-estree": ">=4.15.2",
     "lodash": ">=4.17.15",
     "mixin-deep": ">=1.3.2",
     "set-value": ">=2.0.1"
