--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     }
   },
   "resolutions": {
+    "@typescript-eslint/typescript-estree": ">=4.15.2",
     "lodash": ">=4.17.15",
     "mixin-deep": ">=1.3.2",
     "set-value": ">=2.0.1"
@@ -142,7 +143,7 @@
     "stylelint-scss": "^3.19.0",
     "swr": "^0.4.2",
     "ts-loader": "^8.0.17",
-    "typescript": "^4.1.5",
+    "typescript": "^4.2.2",
     "use-debounce": "^5.2.1",
     "webpack": "^4.44.2",
     "webpack-cli": "^4.5.0",
