--- a/.github/workflows/npm-published-simulation.yml
+++ b/.github/workflows/npm-published-simulation.yml
@@ -81,10 +81,12 @@ jobs:
 
       - name: View some URLs on localhost:5000
         run: |
-          curl http://localhost:5000/en-US/docs/Web/Foo || echo "That didn't work!"
-          # curl --retry-connrefused --retry 5 http://localhost:5000
-          # # Basically, test if it 200 OKs. If not, this'll exit non-zero.
-          # curl http://localhost:5000/en-US/docs/Web/Foo
+          # give it a chance to start
+          sleep 3
+
+          curl --retry-connrefused --retry 5 http://localhost:5000
+          # Basically, test if it 200 OKs. If not, this'll exit non-zero.
+          curl http://localhost:5000/en-US/docs/Web/Foo
 
       - name: Display any outputs from the server
         run: |
@@ -97,3 +99,4 @@ jobs:
         run: |
           cd /tmp/content
           yarn build
+          ls -l client/build/
