--- a/.github/workflows/npm-published-simulation.yml
+++ b/.github/workflows/npm-published-simulation.yml
@@ -94,7 +94,7 @@ jobs:
           PUPPETEER_EXECUTABLE_PATH: /usr/bin/google-chrome
           # When running Yari from within mdn/content it uses port 5000
           # unlike the default which is 3000.
-          DEVELOPING_DEV_BASE_URL: 5000
+          DEVELOPING_DEV_BASE_URL: http://localhost:5000
         run: |
           status=0
           yarn test:testing developing || (
