--- a/deployer/aws-lambda/content-origin-request/package.json
+++ b/deployer/aws-lambda/content-origin-request/package.json
@@ -4,7 +4,8 @@
   "license": "MPL-2.0",
   "main": "index.js",
   "scripts": {
-    "make-package": "yarn install && zip -r -X function.zip . -i index.js 'node_modules/*'"
+    "make-package": "yarn install --production && zip -r -X function.zip . -i index.js 'node_modules/*'",
+    "serve": "nodemon server.js"
   },
   "dependencies": {
     "@yari-internal/constants": "file:../../../libs/constants",
@@ -14,6 +15,11 @@
     "accept-language-parser": "^1.5.0",
     "cookie": "0.4.1",
     "sanitize-filename": "^1.6.3"
+  },
+  "devDependencies": {
+    "express": "4.17.1",
+    "kleur": "4.1.4",
+    "nodemon": "2.0.7"
   },
   "engines": {
     "node": ">=12.x"
