--- a/.github/workflows/content-origin-request.yml
+++ b/.github/workflows/content-origin-request.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Run test server
         working-directory: deployer/aws-lambda/content-origin-request
         run: |
-          yarn serve
+          yarn serve  > /tmp/stdout.log 2> /tmp/stderr.log &
 
       - name: Check that the server started
         run: curl --retry-connrefused --retry 5 -I http://localhost:7000/ping
@@ -48,3 +48,10 @@ jobs:
         run: |
           curl -I http://localhost:7000/docs/Web
           curl -I http://localhost:7000/en-US/docs/Web/
+
+      - name: Debug any server outputs
+        run: |
+          echo "____STDOUT____"
+          cat /tmp/stdout.log
+          echo "____STDERR____"
+          cat /tmp/stderr.log
