--- a/deployer/aws-lambda/content-origin-request/package.json
+++ b/deployer/aws-lambda/content-origin-request/package.json
@@ -17,9 +17,9 @@
     "sanitize-filename": "^1.6.3"
   },
   "devDependencies": {
-    "express": "4.17.1",
     "kleur": "4.1.4",
-    "nodemon": "2.0.7"
+    "nodemon": "2.0.7",
+    "polka": "0.5.2"
   },
   "engines": {
     "node": ">=12.x"
