--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -154,7 +154,7 @@ jobs:
           echo "CONTENT_TRANSLATED_ROOT=$CONTENT_TRANSLATED_ROOT"
           yarn prepare-build
 
-          yarn build
+          yarn build --sync-translated-content
 
           # TODO: When the deployer is available this is where we
           # would upload the whole content of client/build
