Uplift all locales to active (#3008)
* uplift select locales to active

* remove  CTA from sidebars

* export raw html for translated content too

* fix kumascript tests

* isTranslated is not isArchive

* make flaw dashboard work by different locales

* build from mdn/translated-content instead in workflows

* wip

* wip

* remove uplift script

* enable page again

* try less cache

* support move/remove/update for translated content

* fix

* reset cache size

* fix jsref

* slug based translation of

* add translations

* LRU for kuma cache

* don't gather translations on interactive build

* findAll for translated content

* restore errors

* more getRoot

* fix tests

* deduplicate/sort translations

* no more tests for build

* feedback 1

* restore IncludeSubnav

* back to findMatchesInText

* deprectate IncludeSubnav

* sync translated content during build

Co-authored-by: Peter Bengtsson <mail@peterbe.com>

--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -63,7 +63,7 @@ jobs:
 
       - uses: actions/checkout@v2
         with:
-          repository: mdn/translated-content-rendered
+          repository: mdn/translated-content
           path: mdn/translated-content
 
       - name: Setup Node.js environment
@@ -154,7 +154,7 @@ jobs:
           echo "CONTENT_TRANSLATED_ROOT=$CONTENT_TRANSLATED_ROOT"
           yarn prepare-build
 
-          yarn build
+          yarn build --sync-translated-content
 
           # TODO: When the deployer is available this is where we
           # would upload the whole content of client/build
