--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -154,7 +154,8 @@ jobs:
           echo "CONTENT_TRANSLATED_ROOT=$CONTENT_TRANSLATED_ROOT"
           yarn prepare-build
 
-          yarn build --sync-translated-content
+          yarn tool sync-translated-content
+          yarn build
 
           # TODO: When the deployer is available this is where we
           # would upload the whole content of client/build
