remove translation_of handling and improve CI (#3056)
* remove translation_of handling and improve CI

* newline

--- a/.github/workflows/prod-build.yml
+++ b/.github/workflows/prod-build.yml
@@ -173,7 +173,8 @@ jobs:
           echo "CONTENT_TRANSLATED_ROOT=$CONTENT_TRANSLATED_ROOT"
           yarn prepare-build
 
-          yarn build --sync-translated-content
+          yarn tool sync-translated-content
+          yarn build
 
           du -sh client/build
 
