simulate content-origin-request (#3047)
* simulate content-origin-request

* specifics

* oops

* eslint

* start server in background

* polka is smaller

* calm down eslint

* debugging

* node_modules caching

* undebugging

* add basic unit test start

* eslint

* querystring

* more tests

* more tests and stuff

* tests updated based on feedback

* way more conservative with caching node_modules

* all feedback addressed

* Update .github/workflows/content-origin-request.yml

Co-authored-by: Ryan Johnson <escattone@gmail.com>

Co-authored-by: Ryan Johnson <escattone@gmail.com>

--- a/deployer/aws-lambda/content-origin-request/package.json
+++ b/deployer/aws-lambda/content-origin-request/package.json
@@ -4,7 +4,9 @@
   "license": "MPL-2.0",
   "main": "index.js",
   "scripts": {
-    "make-package": "yarn install && zip -r -X function.zip . -i index.js 'node_modules/*'"
+    "make-package": "yarn install --production && zip -r -X function.zip . -i index.js 'node_modules/*'",
+    "serve": "nodemon server.js",
+    "test-server": "jest"
   },
   "dependencies": {
     "@yari-internal/constants": "file:../../../libs/constants",
@@ -14,6 +16,13 @@
     "accept-language-parser": "^1.5.0",
     "cookie": "0.4.1",
     "sanitize-filename": "^1.6.3"
+  },
+  "devDependencies": {
+    "got": "11.8.1",
+    "jest": "26.6.3",
+    "kleur": "4.1.4",
+    "nodemon": "2.0.7",
+    "polka": "0.5.2"
   },
   "engines": {
     "node": ">=12.x"
