--- a/package.json
+++ b/package.json
@@ -77,10 +77,15 @@
     "open": "^7.4.2",
     "open-editor": "3.0.0",
     "prismjs": "1.23.0",
+    "rehype-raw": "5.0.0",
+    "rehype-stringify": "8.0.0",
+    "remark-parse": "9.0.0",
+    "remark-rehype": "8.0.0",
     "sanitize-filename": "^1.6.3",
     "send": "0.17.1",
     "source-map-support": "0.5.19",
-    "tempy": "1.0.0"
+    "tempy": "1.0.0",
+    "unified": "9.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.13.8",
