--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "prismjs": "1.23.0",
     "rehype-raw": "5.0.0",
     "rehype-stringify": "8.0.0",
+    "remark-gfm": "1.0.0",
     "remark-parse": "9.0.0",
     "remark-rehype": "8.0.0",
     "sanitize-filename": "^1.6.3",
