--- a/.github/workflows/npm-published-simulation.yml
+++ b/.github/workflows/npm-published-simulation.yml
@@ -15,6 +15,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - uses: actions/checkout@v2
+        with:
+          repository: mdn/content
+          path: mdn/content
+
       - name: Setup Node.js environment
         uses: actions/setup-node@v2.1.5
         with:
@@ -55,6 +60,7 @@ jobs:
 
       - name: Build and install tarball
         run: |
+          echo mdn/content/ >> .npmignore
           npm pack
           TARBALL=`ls mdn-yari-*.tgz`
           echo $TARBALL
@@ -62,13 +68,6 @@ jobs:
           mv $TARBALL mdn/content/
           cd mdn/content
           yarn add file:$TARBALL
-
-      # Important that this happens AFTER the `npm pack` otherwise the
-      # tarball will contain every single file from mdn/content.
-      - uses: actions/checkout@v2
-        with:
-          repository: mdn/content
-          path: mdn/content
 
       - name: Start Yari from mock content repo
         working-directory: mdn/content
