--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "got": "11.8.2",
     "http-proxy-middleware": "1.0.6",
     "image-size": "0.9.4",
+    "image-type": "4.1.0",
     "imagemin": "7.0.1",
     "imagemin-gifsicle": "7.0.0",
     "imagemin-mozjpeg": "9.0.0",
@@ -77,6 +78,7 @@
     "open": "^7.4.2",
     "open-editor": "3.0.0",
     "prismjs": "1.23.0",
+    "read-chunk": "3.2.0",
     "sanitize-filename": "^1.6.3",
     "send": "0.17.1",
     "source-map-support": "0.5.19",
