check out mdn/content after 'npm pack' (#3188)

--- a/.github/workflows/npm-published-simulation.yml
+++ b/.github/workflows/npm-published-simulation.yml
@@ -60,6 +60,7 @@ jobs:
 
       - name: Build and install tarball
         run: |
+          echo mdn/content/ >> .npmignore
           npm pack
           TARBALL=`ls mdn-yari-*.tgz`
           echo $TARBALL
