disable lighthouse PR check unless relevant changes (#3203)
Co-authored-by: Nick Schonning <nschonni@gmail.com>

--- a/.github/workflows/performance.yml
+++ b/.github/workflows/performance.yml
@@ -2,6 +2,11 @@ name: Performance
 
 on:
   pull_request:
+    paths:
+      - client/src/**
+      - .github/workflows/performance.yml
+      - package.json
+      - yarn.lock
 
 jobs:
   lighthouse:
