--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "fs-extra": "9.1.0",
     "glob": "^7.1.6",
     "got": "11.8.2",
+    "graceful-fs": "4.2.6",
     "http-proxy-middleware": "1.0.6",
     "image-size": "0.9.7",
     "image-type": "4.1.0",
