--- a/package.json
+++ b/package.json
@@ -79,10 +79,17 @@
     "open-editor": "3.0.0",
     "prismjs": "1.23.0",
     "read-chunk": "3.2.0",
+    "rehype-raw": "5.0.0",
+    "rehype-stringify": "8.0.0",
+    "remark-gfm": "1.0.0",
+    "remark-parse": "9.0.0",
+    "remark-rehype": "8.0.0",
     "sanitize-filename": "^1.6.3",
     "send": "0.17.1",
     "source-map-support": "0.5.19",
-    "tempy": "1.0.1"
+    "tempy": "1.0.1",
+    "unified": "9.2.1",
+    "unist-util-visit": "2.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
