--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "filecheck": "cd filecheck && node cli.js",
     "fiori:build": "cd client && build-storybook",
     "fiori:start": "cd client && start-storybook -p 6006",
+    "md": "node markdown/cli.js",
     "prepare-build": "yarn build:client && yarn build:ssr && yarn tool google-analytics-code && yarn tool spas && yarn tool gather-git-history",
     "prettier-check": "prettier --check .",
     "prettier-format": "prettier --write .",
@@ -57,10 +58,13 @@
     "express": "4.17.1",
     "fast-xml-parser": "3.19.0",
     "file-type": "16.3.0",
-    "front-matter": "4.0.2",
+    "front-matter": "^4.0.2",
     "fs-extra": "9.1.0",
     "glob": "^7.1.6",
     "got": "11.8.2",
+    "hast-util-is-element": "^1.1.0",
+    "hast-util-to-html": "^7.1.2",
+    "hast-util-to-text": "^2.0.1",
     "http-proxy-middleware": "1.0.6",
     "image-size": "0.9.7",
     "image-type": "4.1.0",
@@ -79,16 +83,21 @@
     "open-editor": "3.0.0",
     "prismjs": "1.23.0",
     "read-chunk": "3.2.0",
-    "rehype-raw": "5.1.0",
-    "rehype-stringify": "8.0.0",
-    "remark-gfm": "1.0.0",
-    "remark-parse": "9.0.0",
-    "remark-rehype": "8.0.0",
+    "rehype-format": "^3.1.0",
+    "rehype-parse": "^7.0.1",
+    "rehype-raw": "^5.1.0",
+    "rehype-remark": "^8.0.0",
+    "rehype-stringify": "^8.0.0",
+    "remark-gfm": "^1.0.0",
+    "remark-parse": "^9.0.0",
+    "remark-rehype": "^8.0.0",
+    "remark-stringify": "^9.0.1",
     "sanitize-filename": "^1.6.3",
     "send": "0.17.1",
     "source-map-support": "0.5.19",
     "tempy": "1.0.1",
-    "unified": "9.2.1",
+    "unified": "^9.2.1",
+    "unist-builder": "^2.0.3",
     "unist-util-visit": "2.0.3"
   },
   "devDependencies": {
