--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "resolutions": {
     "@typescript-eslint/typescript-estree": ">=4.15.2",
+    "babel-loader": "8.1.0",
     "lodash": ">=4.17.15",
     "mixin-deep": ">=1.3.2",
     "set-value": ">=2.0.1"
