--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "resolutions": {
     "@typescript-eslint/typescript-estree": ">=4.15.2",
+    "babel-loader": "8.1.0",
     "lodash": ">=4.17.15",
     "mixin-deep": ">=1.3.2",
     "set-value": ">=2.0.1"
@@ -106,15 +107,16 @@
     "@mdn/minimalist": "^0.8.0",
     "@storybook/addon-a11y": "^6.2.8",
     "@storybook/addon-actions": "^6.2.8",
-    "@storybook/addon-essentials": "^6.1.21",
+    "@storybook/addon-essentials": "^6.2.8",
     "@storybook/addon-links": "^6.2.8",
     "@storybook/node-logger": "^6.2.8",
     "@storybook/preset-create-react-app": "^3.1.7",
-    "@storybook/react": "^6.1.21",
+    "@storybook/react": "^6.2.8",
     "@testing-library/react": "^11.2.6",
     "@types/jest": "^26.0.22",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "babel-loader": "8.1.0",
     "braces": "^3.0.2",
     "cross-env": "^7.0.3",
     "diff": "^5.0.0",
@@ -146,6 +148,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-is": "^17.0.2",
+    "react-refresh": "0.9",
     "react-router": "6.0.0-beta.0",
     "react-router-dom": "6.0.0-beta.0",
     "react-scripts": "4.0.3",
