--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@fast-csv/parse": "4.3.6",
     "@mdn/browser-compat-data": "3.2.4",
     "accept-language-parser": "1.5.0",
+    "browser-specs": "^1.34.2",
     "chalk": "4.1.0",
     "cheerio": "1.0.0-rc.6",
     "cli-progress": "^3.9.0",
