markdown transform&report improvements

--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "js-yaml": "4.1.0",
     "loglevel": "^1.7.1",
     "lru-cache": "^6.0.0",
+    "mdast-util-phrasing": "^2.0.0",
     "mdn-data": "2.0.18",
     "open": "^8.0.6",
     "open-editor": "3.0.0",
@@ -154,6 +155,7 @@
     "react-router": "6.0.0-beta.0",
     "react-router-dom": "6.0.0-beta.0",
     "react-scripts": "4.0.3",
+    "remark-prettier": "^1.2.0",
     "rough-notation": "0.5.1",
     "sass": "^1.32.11",
     "stylelint": "^13.12.0",
