--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production node build/cli.js",
     "build:client": "cd client && cross-env INLINE_RUNTIME_CHUNK=false react-scripts build",
+    "postbuild:client": "yarn tool optimize-client-build",
     "build:ssr": "cd ssr && webpack --mode=production",
     "dev": "yarn prepare-build && nf -j Procfile.dev start",
     "eslint": "eslint .",
@@ -141,6 +142,7 @@
     "jest-puppeteer": "5.0.2",
     "jsdom": "^16.5.3",
     "jsesc": "^3.0.2",
+    "md5-file": "5.0.0",
     "nodemon": "2.0.7",
     "pegjs": "^0.10.0",
     "prettier": "2.2.1",
