optimize how we set the shortcut icon (#3621)
* optimize how we set the shortcut icon

Part of #3611

* fix eslint problem

* fix scripts

* use logger.info instead

* add favicon-48x48.png for the new default favicon

* add a test

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "fiori:build": "cd client && build-storybook",
     "fiori:start": "cd client && start-storybook -p 6006",
     "md": "node markdown/cli.js",
-    "prepare-build": "yarn build:client && yarn build:ssr && yarn tool google-analytics-code && yarn tool spas && yarn tool gather-git-history",
+    "prepare-build": "yarn build:client && yarn build:ssr && yarn tool optimize-client-build && yarn tool google-analytics-code && yarn tool spas && yarn tool gather-git-history",
     "prettier-check": "prettier --check .",
     "prettier-format": "prettier --write .",
     "start": "(test -f client/build/index.html || yarn build:client) && (test -f ssr/dist/main.js || yarn build:ssr) && (test -d client/build/en-us/_spas || yarn tool spas) && nf -j Procfile.start start",
@@ -80,6 +80,7 @@
     "js-yaml": "4.1.0",
     "loglevel": "^1.7.1",
     "lru-cache": "^6.0.0",
+    "md5-file": "5.0.0",
     "mdn-data": "2.0.18",
     "open": "^8.0.6",
     "open-editor": "3.0.0",
